<resources>

    <string name="app_name">MakeU\'rSport</string>
    <string name="title_activity_course_en_cours">MakeU\'rSport</string>
	<string name="title_dialog_sportif">Paramètre de l\'utilisateur</string>
	<string name="title_dialog_generer_parcours">Path Generator </string>
	<string name="title_dialog_sport">Choose your sport</string>
	<string name="title_historique">History</string>
	<string name="partage_title">Send to…</string>
	<string name="sport_velo">Bike</string>
	<string name="sport_roller">Rollerblade</string>
	<string name="sport_course">Race</string>
	<string name="course_titre">Race of %s</string>
	<string name="BT_share">Share</string>
	<string name="BT_delete">delete</string>
	
	<string name="duree_titre">Duration:</string>
	<string name="vitmoy_titre">Average speed:</string>
	<string name="vitmoy_par_defaut">0.0km/h</string>
	<string name="vitreel_titre">Actual speed:</string>
	<string name="vitreel_par_defaut">0.0km/h</string>
	<string name="calories_titre">Calories burned:</string>
	<string name="calories_par_defaut">0</string>
	
	<string name="dist_titre">Distance:</string>
	<string name="dist_par_defaut">0km</string>
	<string name="duree_par_defaut">00.00.00</string>
	<string name="unite_distance">km</string>
	<string name="unite_vitesse">km/h</string>
	<string name="unite_heure">h</string>
	
	<string name="param_date_naissance">Year of birth:</string>
	<string name="param_date_naissance_hint">1993</string>
	<string name="param_poids">Weight (kg):</string>
	<string name="param_poids_hint">80.00</string>
	<string name="param_taille">Height (en cm):</string>
	<string name="param_taille_hint">170</string>
	
	<string name="dialog_sportif_cancel_button">Cancel</string>
	<string name="dialog_sportif_confirm_button">Confirm</string>
	
	<string name="parcours_dialog">Distance of your round-trip</string>
	<string name="param_distance_hint">Distance (km)</string>
	<string name="mauvaise_distance">Please type in a correct distance.</string>
	<string name="cancel_string">The modification has been canceled</string>
	<string name="infos_pas_rempli">Please, fill all the required fields</string>
	
	<string name="SP_poids">sportif_poids</string>
    <string name="SP_taille">sportif_taille</string>
    <string name="SP_annee_naissance">sportif_annee_naissance</string>
    <string name="SP_infos_audio">infos_audio</string>
    
    <string name="course_sauvegardee">Trip saved!</string>
    
    
    <string name="message_erreur_desactivation_GPS">This application requires the GPS functionnality of your phone. Please activate it.</string>
    <string name="GPS_desactive">Your GPS has been desactivated. Please activate it to continue.</string>
    <string name="play_service_not_available">Google Play Services are required for this application to work. Please download them from the Google Play Store</string>
    <string name="histo_course_titre">Trip from the %1$s of %2$s km</string>
    <string name="message_inactif">Waiting for GPS signal…</string>
    
    <string name="mess_partage">I\'ve done a trip of %1$s in only %2$s !</string>
    <string name="message_tts">Distance : %1$s kilometers. Durée : %2$s. Average speed : %3$s kilometers hour.</string>

    <string name="menu_bt_play_pause">Play/Pause</string>
    <string name="menu_bt_stop">Stop</string>
    <string name="menu_bt_sport">Choose your sport</string>
    
    <string name="BT_delete_menu">Delete</string>
    <string name="BT_delete_menu_confirm">Delete</string>
    <string name="BT_delete_menu_cancel">Cancel</string>
    <!-- Preferences -->
    <string name="pref_sportif_categ">Sportsman</string>
    <string name="pref_sportif_naissance">Year of birth</string>
    <string name="pref_sportif_poids">Weight</string>
    <string name="pref_sportif_taille">Height</string>
    <string name="pref_link">pref_link</string>
    <string name="pref_link_title">Source</string>
    <string name="pref_link_summary">Find the sources of the app on GitHub.</string>
    <string name="pref_infos_audio">Audio guide</string>
    <string name="pref_infos_audio_on">You will receive audio notifications about your trip.</string>
	<string name="pref_infos_audio_off">You won\'t receive audio notifications about your trip.</string>
	<string name="pref_manuel">Manual</string>
	<string name="pref_manuel_title">Needing help?</string>
	<string name="pref_manuel_summary">Download the user guide! (PDF)</string>
</resources>