<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory 
        android:title="@string/pref_sportif_categ"
        android:key="sportif_category">                <!-- android:entries="@array/updateInterval"
            android:entryValues="@array/updateIntervalValues" -->
        <com.makeursport.preferences.IntEditTextPreference
            android:key="@string/SP_annee_naissance"
            android:title="@string/pref_sportif_naissance"
            android:numeric="integer"
            android:maxLength="4"
            
            />
        <com.makeursport.preferences.FloatEditTextPreference
            android:key="@string/SP_poids"
            android:title="@string/pref_sportif_poids"
            android:numeric="decimal"/>
        <com.makeursport.preferences.IntEditTextPreference
            android:key="@string/SP_taille"
            android:title="@string/pref_sportif_taille"
            android:numeric="integer"
            />
        <CheckBoxPreference
            android:key="@string/SP_infos_audio"
            android:title="@string/pref_infos_audio"
            android:summaryOn="@string/pref_infos_audio_on"
            android:summaryOff="@string/pref_infos_audio_off"
            />
    </PreferenceCategory>
    <Preference 
        android:key="@string/pref_manuel"
        android:title="@string/pref_manuel_title"
        android:summary="@string/pref_manuel_summary">
        <intent android:action="android.intent.action.VIEW"
        	android:data="https://www.dropbox.com/sh/pklok8pndkb8gyz/n8gM30sWGp/Manuel_MakeUrSport.pdf" />
    </Preference>
    <Preference 
        android:key="@string/pref_link"
        android:title="@string/pref_link_title"
        android:summary="@string/pref_link_summary">
        <intent android:action="android.intent.action.VIEW"
        	android:data="https://github.com/makeursport/com.makeursport" />
    </Preference>
    
</PreferenceScreen>
